# voice-recorder

./: README.md  pyproject.toml
src/voice_recorder/: __init__.py  voice_recorder.py
src/voice_recorder_cli/: main.py  table.py
